EXTRA_PROGRAMS             +=                                                   \
                              $(top_builddir)/tests/helloworld/helloworld       \
                              $(top_builddir)/tests/multiunit/multiunit         \
                              $(top_builddir)/tests/infiniteloop/infiniteloop   \
                              $(top_builddir)/tests/cli_args/cli_args

__top_builddir__tests_helloworld_helloworld_SOURCES            = tests/helloworld.cpp
__top_builddir__tests_helloworld_helloworld_LDFLAGS            = $(ALL_LDFLAGS)
__top_builddir__tests_helloworld_helloworld_CPPFLAGS           = $(ALL_CPPFLAGS)
__top_builddir__tests_helloworld_helloworld_LDADD              = $(ALL_LDADD)

__top_builddir__tests_multiunit_multiunit_SOURCES              = tests/multiunitA.cpp tests/multiunitB.cpp
__top_builddir__tests_multiunit_multiunit_LDFLAGS              = $(ALL_LDFLAGS)
__top_builddir__tests_multiunit_multiunit_CPPFLAGS             = $(ALL_CPPFLAGS)
__top_builddir__tests_multiunit_multiunit_LDADD                = $(ALL_LDADD)

__top_builddir__tests_infiniteloop_infiniteloop_SOURCES        = tests/infiniteloop.cpp
__top_builddir__tests_infiniteloop_infiniteloop_LDFLAGS        = $(ALL_LDFLAGS)
__top_builddir__tests_infiniteloop_infiniteloop_CPPFLAGS       = $(ALL_CPPFLAGS)
__top_builddir__tests_infiniteloop_infiniteloop_LDADD          = $(ALL_LDADD)

__top_builddir__tests_cli_args_cli_args_SOURCES        		   = tests/cli_args.cpp
__top_builddir__tests_cli_args_cli_args_LDFLAGS        		   = $(ALL_LDFLAGS)
__top_builddir__tests_cli_args_cli_args_CPPFLAGS       		   = $(ALL_CPPFLAGS)
__top_builddir__tests_cli_args_cli_args_LDADD          		   = $(ALL_LDADD)
