db_SOURCES               +=                                                     \
                            src/ast/global.cpp                                  \
                            src/ast/scanner.cpp                                 \
                            src/ast/data.cpp

db_LDADD                 +=                                                     \
                            @CLANG_LIBS@
