db_SOURCES               +=                                                     \
                            src/gdb/handlers/console.cpp                        \
                            src/gdb/handlers/logging.cpp                        \
                            src/gdb/handlers/notify.cpp                         \
                            src/gdb/handlers/output.cpp                         \
                                                                                \
                            src/gdb/handlers/stacklistframes.cpp                \
                            src/gdb/handlers/stacklistvariablessimple.cpp       \
                            src/gdb/handlers/stacklistvariablesall.cpp          \
                            src/gdb/handlers/stackinfoframe.cpp                 \
                                                                                \
                            src/gdb/handlers/threadgroupstarted.cpp             \
                            src/gdb/handlers/running.cpp                        \
                            src/gdb/handlers/stopped.cpp                        \
                            src/gdb/handlers/execnext.cpp                       \
                                                                                \
                            src/gdb/handlers/interpreterexec.cpp                \
                            src/gdb/handlers/infoline.cpp                       \
                            src/gdb/handlers/infoaddress.cpp                    \
                            src/gdb/handlers/infofunctions.cpp                  \
                                                                                \
                            src/gdb/handlers/processexited.cpp                  \
                            src/gdb/handlers/killprog.cpp                       \
                                                                                \
                            src/gdb/handlers/fileexec.cpp                       \
                            src/gdb/handlers/listsourcefiles.cpp                \
                                                                                \
                            src/gdb/handlers/gdbversion.cpp                     \
                                                                                \
                            src/gdb/handlers/breakinsert.cpp                    \
                            src/gdb/handlers/breakdelete.cpp                    \
                            src/gdb/handlers/breakenable.cpp                    \
                            src/gdb/handlers/breakdisable.cpp                   \
                            src/gdb/handlers/breakmodified.cpp